k8s/base/movies-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-api
  namespace: movies
  labels:
    app: movies-api
spec:
  selector:
    app: movies-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
